# nbedr

./: .containerignore  .dockerignore  .flake8  .gitignore  .safety-policy.yml  .wikiignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  WIKI_AUTOMATION_SUMMARY.md  demo_cli.py  mypy.ini  nbedr.py  pyproject.toml  requirements-cloud.txt  requirements-documents.txt  requirements-heavy.txt  requirements-local-llm.txt  requirements-minimal.txt  requirements-test.txt  requirements-vector-stores.txt  requirements.txt  tmp8yjdctxe_part_1.jsonl  tmp8yjdctxe_part_2.jsonl  tmpbd0px0pn_part_3.jsonl  wiki-config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  wiki-publish.yml
cli/: __init__.py  main.py
core/: __init__.py  config.py  models.py
core/clients/: __init__.py  aws_bedrock_embedding_provider.py  azure_openai_embedding_provider.py  base_embedding_provider.py  embedding_provider_factory.py  google_vertex_embedding_provider.py  llamacpp_embedding_provider.py  lmstudio_embedding_provider.py  ollama_embedding_provider.py  openai_client.py  openai_embedding_provider.py
core/services/: __init__.py  document_service.py
core/sources/: __init__.py  factory.py  s3.py
core/utils/: __init__.py  document_coordinator.py  env_config.py  identity_utils.py  instance_coordinator.py  rate_limiter.py
core/vector_stores/: __init__.py  azure_search_store.py  base.py  elasticsearch_store.py  faiss_store.py  pgvector_store.py
deployment/: README.md
deployment/docker/: .env.example  Dockerfile  Dockerfile.distroless  SECURITY_POLICY.md  docker-compose.yml
deployment/kubernetes/aks/: deployment-patch.yaml  kustomization.yaml  pvc-patch.yaml
deployment/kubernetes/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  templates-configmap.yaml
deployment/kubernetes/eks/: deployment-patch.yaml  kustomization.yaml  pvc-patch.yaml  service-account.yaml
deployment/kubernetes/gke/: deployment-patch.yaml  kustomization.yaml  pvc-patch.yaml  service-account.yaml
deployment/scripts/: build-docker.sh  ci-deploy.sh  deploy-k8s.sh  deploy.sh
docs/: AIOHTTP_DEPENDENCY_FIX.md  BUILD.md  CI_CD_FIX_COMPLETE.md  DEPENDENCY_FIX_SUMMARY.md  DEVELOPMENT.md  DOCKER_BUILD_OPTIMIZATION.md  DYNAMIC_TAGGING.md  FINAL_QUALITY_REPORT.md  GITHUB_PERMISSIONS_SETUP.md  MIGRATION_GUIDE.md  MYPY_FIXES.md  PYTHON_VERSION_UPDATE.md  README_STRUCTURE.md  RELEASE_SUMMARY.md  RELEASE_WORKFLOW_VALIDATION.md  SECURITY_FIXES.md  TEST_UPDATES_SUMMARY.md  TYPE_CHECKING_SUMMARY.md  WIKI_DOCUMENTATION.md
scripts/: check_python.py  generate-wiki.py  setup_dev.sh
templates/: README.md
tests/: __init__.py  conftest.py  test_coordination_basic.py  test_document_coordination.py  test_parallel_instances.py
tests/integration/: __init__.py  test_document_service.py
tests/unit/: __init__.py  test_clients.py  test_config.py  test_embedding_utils.py  test_models.py  test_sources.py  test_utils.py  test_vector_stores.py
